Correcciones de otros, bugs solucionados. Dialogos de añadir a catálogo unificados